ARROW-12087: [C++] Allow sorting durations, timestamps with timezones